--- a/lemonldap/SP/Dockerfile
+++ b/lemonldap/SP/Dockerfile
@@ -45,4 +45,4 @@ RUN rm -rf /tmp/lemonldap-ng-config
 
 EXPOSE 80 443
 VOLUME ["/var/log/apache2", "/etc/apache2", "/etc/lemonldap-ng", "/var/lib/lemonldap-ng/conf", "/var/lib/lemonldap-ng/sessions", "/var/lib/lemonldap-ng/psessions"]
-ENTRYPOINT ["/usr/sbin/apache2ctl", "-D", "FOREGROUND"]
+ENTRYPOINT ["/usr/bin/safe_apache"]
