--- a/lemonldap/Base/Dockerfile
+++ b/lemonldap/Base/Dockerfile
@@ -16,7 +16,7 @@ RUN wget -O - http://lemonldap-ng.org/_media/rpm-gpg-key-ow2 | apt-key add -
 COPY lemonldap-ng.list /etc/apt/sources.list.d/
 
 # Install LemonLDAP::NG packages
-RUN apt-get -y update && apt-get -y install apache2 libapache2-mod-perl2 libapache2-mod-fcgid lemonldap-ng lemonldap-ng-fr-doc liblasso-perl vim ack-grep
+RUN apt-get -y update && apt-get -y install apache2 libapache2-mod-perl2 libapache2-mod-fcgid lemonldap-ng lemonldap-ng-fr-doc liblasso-perl vim ack-grep libdbd-pg-perl
 
 # Configure mod
 RUN echo '<IfModule mod_rewrite.c>\n\
